--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -427,6 +427,9 @@ header ul li a:hover {
     margin-bottom: 15px;
     color: #8d8f92;
 }
+#contact form label:nth-child(4){
+    display: none;
+}
 #contact form label:nth-child(1) {
     margin-right: 15px;
 }
@@ -562,6 +565,18 @@ header ul li a:hover {
     #places #places_list .place a img {
         width: 100%;
     }
+
+    /* contact */
+    #contact .container {
+        max-width: 555px;
+        flex-direction: column-reverse;
+        text-align: center;
+        align-items: center;
+        margin: 0px auto;
+    }
+    #contact form {
+        margin: -90px auto 70px auto;
+    }
 }
 
 @media screen and (min-width: 600px) and (max-width: 768px) {
@@ -618,6 +633,19 @@ header ul li a:hover {
     }
     #places #places_list .place a img {
         width: 100%;
+    }
+
+    /* contact */
+    #contact .container {
+        max-width: 555px;
+        flex-direction: column-reverse;
+        text-align: center;
+        align-items: center;
+        margin: 0px auto;
+    }
+    #contact form {
+        margin: auto;
+        margin-bottom: 70px;
     }
 }
 
@@ -682,6 +710,35 @@ header ul li a:hover {
     }
     #places #places_list .place a img {
         width: 100%;
+    }
+
+    /* contact */
+    #contact .container {
+        flex-direction: column-reverse;
+        text-align: center;
+        align-items: center;
+        margin: 0px auto;
+    }
+    #contact form{
+        flex-direction: column;
+        align-items: center;
+        margin: 0px auto;
+        margin-bottom: 60px;
+    }
+    #contact form label{
+        width: 100%;
+    }
+    #contact form input[type="text"] {
+        margin: 0px;
+    }
+    #contact form label:nth-child(4) {
+        display:block;
+    }
+    #contact form label:nth-child(2){
+        display: none;
+    }
+    #contact form textarea {
+        width: 90%;
     }
 
     /* footer */
