--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,1 +1,292 @@
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    outline: none;
+}
+@font-face {
+    font-family: Myriad;
+    src: url(../fonts/myriad-pro-cufonfonts/MYRIADPRO-REGULAR.OTF);
+}
+
+a {
+    text-decoration: none;
+}
+
+li {
+    list-style: none;
+}
+
+body {
+    font-family: Myriad, Roboto, sans-serif;
+}
+a:link, a:active, a:visited {
+    text-decoration: none;
+}
+.container{
+    max-width: 1140px;
+    margin: 0px auto;
+    padding: 0px 15px;
+}
+
+/* start header */
+header {
+    background-color:   #1d2126;
+    z-index: 10;
+    left: 0;
+    right: 0;
+    top: 0;
+    position: fixed;
+}
+header h1 {
+    height: 30px;
+}
+header .container {
+    display: flex;
+    justify-content: space-between;
+    padding: 26px 15px;
+    line-height: 30px;
+}
+header ul {
+    height: 30px;
+}
+header ul li {
+    display: inline-block;
+    height: 30px;
+}
+header ul li a {
+    display: inline-block;
+    color: #a4aead;
+    font-size:  14px;
+    text-transform:  uppercase;
+    line-height: 30px;
+    padding: 0px 10px;
+    margin: 0px 15px;
+    border: 2px solid transparent;
+    border-radius: 5px;
+}
+
+header ul li a.active {
+    color: #23b7a4;
+    border-color: #23b7a4;
+}
+header ul li a:hover {
+    border-color: #5b6168;
+}
+
+.checkbtn {
+
+    font-size: 40px;
+    color: white;
+    cursor: pointer;
+    display: none;
+}
+
+#check {
+    display: none;
+}
+
+
+/* end header */
+
+
+
+/* start slider */
+#jumbotron {
+    background-color: #3c3c52;
+    background-image: url(../images/slider/pic_slider.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+#jumbotron .container {
+    min-height: 660px;
+    display: flex;
+    align-items: center;
+    position: relative;
+
+}
+#jumbotron .info {
+    max-width: 675px;
+}
+#jumbotron .info h1{
+    font-size: 36px;
+    line-height: 42px;
+    color: white;
+    text-transform: uppercase;
+    font-weight: normal;
+}
+#jumbotron .info p {
+    font-size: 16px;
+    line-height: 26px;
+    color: #ccd0d7;
+    margin-top: 24px;
+}
+#jumbotron .info a{
+    display: inline-block;
+    height: 44px;
+    line-height: 44px;
+    padding: 0px 28px;
+    color: white;
+    font-size: 14px;
+    text-transform: uppercase;
+    border: 2px solid white;
+    border-radius: 5px;
+    margin-right: 11px;
+}
+#jumbotron .info div {
+    margin-top: 36px;
+}
+#jumbotron .info a:hover{
+    background-color:#23b7a4;
+    border-color: #23b7a4;
+}
+#jumbotron .dots {
+    position: absolute;
+    right: 15px;
+    bottom: 30px;
+    
+}
+#jumbotron .dots a{
+    width: 13px;
+    height: 13px;
+    border: 2px solid white;
+    border-radius: 50%;
+    display: inline-block;
+    text-indent: -100000px;
+}
+#jumbotron .dots a:hover, #jumbotron .dots a.active{
+    background-color: white;
+}
+/* end slider */
+
+
+
+/* start about */
+
+/* end about */
+
+
+
+/* start teams */
+
+/* end teams */
+
+
+
+/* palces */
+
+/* end places */
+
+
+
+/* services */
+
+/* end services */
+
+
+
+/* start features */
+
+/* end features */
+
+
+
+/* start contact */
+
+/* end contact */
+
+
+
+/* start footer */
+
+/* end footer */
+
+
+
+/* responsive */
+
+@media screen and (min-width: 1200px) {
+    .container {
+        width: 90%;
+    }
+}
+
+@media screen and (min-width: 992px) and (max-width: 1200px) {
+   /* jumbotron */
+   #jumbotron .container {
+       min-height: 600px;
+   }
+}
+
+@media screen and (min-width: 768px) and (max-width: 992px) {
+    /* header */
+    
+    
+    /* jumbotron */
+   #jumbotron .container {
+    min-height: 600px;
+}
+}
+
+@media screen and (min-width: 600px) and (max-width: 768px) {
+   /* header */
+   .checkbtn {
+       display: block;
+   }
+
+   
+   header ul {
+       position: fixed;
+       width: 100%;
+       height: 100vh;
+       background-color: #2c3e50;
+       top: 80px;
+       left: -100%;
+       text-align: center;
+       transition: all .5s;
+   }
+   header ul li {
+       display: block;
+       margin: 30px;
+       line-height: 30px;
+   }
+   #check:checked ~ ul {
+       left: 0;
+   }
+  /* jumbotron */
+  #jumbotron .container {
+    min-height: 600px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+    .checkbtn {
+        display: block;
+    }
+ 
+    
+    header ul {
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        background-color: #2c3e50;
+        top: 80px;
+        left: -100%;
+        text-align: center;
+        transition: all .5s;
+    }
+    header ul li {
+        display: block;
+        margin: 30px;
+        line-height: 30px;
+    }
+    #check:checked ~ ul {
+        left: 0;
+    }
+   /* jumbotron */
+   #jumbotron .container {
+     min-height: 600px;
+    }
+}
